      - Changed the default value of the variable
        'cupt::update::keep-bad-signatures' to 'yes'.
    - cache:
      - Support regular expressions in pin preferences. Thanks to
        Julian Andres Klode for the suggestion. (Closes: #587478)
      - When skipping an index or translation file processing due to an error,
        use a human-readable alias in the warning message.
  * debian:
    - control:
      - Relax Boost build requirements to match 1.42 and higher, not only
        1.42.
      - Vcs-Browser: the main branch is now 'master' again.
  * Support out-of-tree builds. (Closes: #623115)
  * Switched to Cupt-specific directory 'cupt::directory::state::lists' for
    index lists.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 19 Apr 2011 19:04:22 +0300

cupt (2.0.2) unstable; urgency=low

  * lib:
    - download/methodfactory:
      - Don't try to unload a module twice if it was loaded successfully but
        no needed symbols were found.
    - download/uri:
      - Correctly handle URIs with tree slashes, such as 'file:///...'.
  * downloadmethods:
    - file:
      - Implemented. Fixes a regression since 2.0.0~alpha1. (Closes: #624216)
  * doc:
    - reference:
      - 'File::getBlock': documented an output value of the 'size' parameter.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 30 Apr 2011 14:31:22 +0300

cupt (2.0.1) unstable; urgency=low

  * lib:
    - download/manager:
      - Give a warning instead of an error on the systems where the socket
        option SO_RCVTIMEO is not supported. Thanks to Jonathan Nieder for
        the analysis.
    - [Jonathan Nieder] Don't check for WIFCONTINUED. (Closes: #623159)
  * debian:
    - control:
      - Fixed typo 'arternative' in some short descriptions.
  * doc:
    - reference:
      - Hide 'CUPT_API' macro in declarations.
      - Hide 'CUPT_*' macro definitions.
    - tutorial:
      - Documented repository cache layout incompatibility with recent
        versions of APT.